--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@sanity/client": "^6.1.7",
     "@sanity/image-url": "^1.0.2",
     "@sanity/vision": "^3.14.3",
     "autoprefixer": "10.4.14",
