--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@sanity/client": "^6.1.7",
     "@sanity/image-url": "^1.0.2",
     "@sanity/vision": "^3.14.3",
+    "@stripe/stripe-js": "^1.54.1",
     "autoprefixer": "10.4.14",
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.10",
@@ -23,6 +24,7 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.10.1",
     "sanity": "^3.14.3",
+    "stripe": "^12.14.0",
     "styled-components": "5.2",
     "tailwindcss": "3.3.3"
   }
